--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,10 @@
+<% if logged_in? %>
+  <p>ログイン完了ユーザ: <%= currnet_user.name %></p>
+<% else %>
 <div class="center jumbotron">
   <div class="text-center">
     <h1>Hello World</h1>
     <%= link_to 'Sign up now', signup_path, class: 'btn btn-lg btn-primary' %>
   </div>
 </div>
+<% end %>
