--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,6 +2,13 @@
 タイトル<%= f.text_field :title %><br>
 テキスト<%= f.text_field :content %><br>
 <div id="image-box">
+  <div id="previews">
+    <% if @post.persisted? %>
+      <% @post.images.each_with_index do |image, i| %>
+        <%= image_tag image.url.url, data: { index: i }, width: "150px", height: "150px" %>
+      <% end %>
+    <% end %>
+  </div>
   <%= f.fields_for :images do |image| %>
   <div data-index="<%= image.index %>" class="js-file_group">
     <%= image.file_field :url, class: 'js-file' %><br>
