--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -18,7 +18,7 @@
      </div>
      <div>
         <% if current_user == post.user %>
-          <%= link_to 'Delete', post, method: :delete, date: { confirm: "You sure?" }, class: 'btn btn-danger btn-sm' %>
+          <%= link_to 'Delete', post, method: :delete, data: { confirm: "削除します。よろしいですか？" } %>
         <% end %>
      </div>
     </div>
