--- a/app/views/users/likes.html.erb
+++ b/app/views/users/likes.html.erb
@@ -1,4 +1,3 @@
-<h1>ユーザ情報</h1>
 <div class="row">
     <aside class="col-sm-4">
       <h3 class="card-title"><%= @user.name %></h3>
@@ -12,7 +11,7 @@
       <li class="nav-item"><a href="<%= followings_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user)) %>">Followings <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
       <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
     </ul>
-    <%= render 'posts/posts', posts: @posts %>
+    <%= render 'posts/posts', posts: @favorites %>
   </div>
 </div>
 
