--- a/app/assets/stylesheets/toppages.scss
+++ b/app/assets/stylesheets/toppages.scss
@@ -1,3 +1,39 @@
-// Place all the styles related to the toppages controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.topImage {
+  background-image: image-url("topImg.jpg");
+  background-size: cover;
+  height: calc(100vh - 56px);
+  &__inContent {
+    top: 25vh;
+    left: 10vw;
+  }
+}
+.topImage__inContent--title {
+  font-size: 4rem;
+  color: #ffffff;
+  text-shadow: 8px 6px 7px rgba(0, 0, 0, 0.4);
+}
+.topImage__inContent--content {
+  font-size: 1.5rem;
+  color: #ffffff;
+  text-shadow: 8px 6px 7px rgba(0, 0, 0, 0.4);
+}
+.topImage__inContent--div {
+  border: solid 2px #ffffff;
+  font-weight: 700;
+  color: #ffffff;
+  padding: 15px;
+  text-decoration: none;
+  width: 200px;
+  margin-top: 100px;
+  cursor: pointer;
+}
+body {
+  background-color: rgba(var(--b3f,250,250,250),1);
+}
+.btn-arrival {
+  background-color: #6796de;
+  color: #fff;
+}
+.list-group {
+  border-bottom: 3px solid #e8e8e8;
+}
