--- a/app/views/favorites/_favorite_button.html.erb
+++ b/app/views/favorites/_favorite_button.html.erb
@@ -1,11 +1,15 @@
 <% if current_user.already_favorited?(post) %>
   <%= form_with(model: current_user.favorites.find_by(post_id: post.id), local: true, method: :delete) do |f| %>
     <%= hidden_field_tag :post_id, post.id %>
-    <%= f.submit 'Unfavorite', class: 'btn btn-danger btn-sm' %>
+    <%= f.button :type => "submit", style: 'border-style: none;', class:'favorite-btn_off' do %>
+      <i class="fas fa-heart fa-3x"></i>
+    <% end %>
   <% end %>
 <% else %>
   <%= form_with(model: current_user.favorites.build, local: true) do |f| %>
     <%= hidden_field_tag :post_id, post.id %>
-    <%= f.submit 'Favorite', class: 'btn btn-primary btn-sm' %>
+    <%= f.button :type => "submit", style: 'border-style: none;', class:'favorite-btn_on' do %>
+      <i class="far fa-heart fa-3x"></i>
+    <% end %>
   <% end %>
 <% end %>
