--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,29 +1,48 @@
-<h1>投稿詳細ページ</h1>
-<%= @post.title %><br>
-<%= @post.content %><br>
-<h4>いいね件数：<%= @post.favorites.count %></h4>
-<% @post.images.each do |i| %>
-  <%= image_tag ("#{i.url.url}") %>
-<% end %>
-<h2>コメント一覧</h2>
-<% @comments.each do |c| %>
+<div class="posts-show-ct">
+    <div class="user-icon">
+      <div>
+        <i class="far fa-user-circle fa-5x"></i>
+      </div>
+      <div class="user-ct">
+        <div class="user-ct-nm"><%= @post.user.name %></div><span class="text-muted"> posted at <%= @post.created_at %></span>
+      </div>
+    </div>
+  <div class="posts-main card">
+    <div class="img-ct">
+      <% @post.images.each do |i| %>
+        <%= image_tag ("#{i.url.url}"), class: 'big-img' %>
+      <% end %>
+    </div>
+    <div class="posts-under">
+      <div class="posts-box_ud">
+        <%= render "favorites/favorite_button", post: @post %>
+          <div class="favorite-count">
+            <div class="favorite-posts">
+              いいね ! <%= @post.favorites.count %>件
+            </div>
+            <% @post.favorited_users.each do |user| %>
+              <li><%= user.email %></li>
+            <% end %>
+          </div>
+            <%= @post.title %><br>
+            <%= @post.content %><br>
+            <h4 class="comment-btn">コメント一覧</h4>
+          <% @comments.each do |c| %>
+            <div>
+              <a href="/users/<%= @post.user.id %>"><%= c.user.email %></a>
+              <%= c.text %>
+              <hr>
+            </div>
+          <% end %>
+        <div class="form-group">
+          <%= form_for [@post, @comment] do |f| %>
+            <label for="text1">Comments: </label>
+            <%= f.text_field :text, class: 'form-control' %>
+            <%= f.submit 'コメントする', class: 'btn btn-comments' %>
+          <% end %>
+        </div>
+        <%= link_to "ホームへ戻る", root_path %>
+      </div>
+    </div>
   <div>
-    <a href="/users/<%= @post.user.id %>"><%= c.user.email %></a>
-    <%= c.text %>
-    <hr>
-  </div>
-<% end %>
-
-<%= form_for [@post, @comment] do |f| %>
-  <%= f.text_field :text %>
-  <br>
-  <%= f.submit 'コメントする' %>
-<% end %>
-
-<% @post.favorited_users.each do |user| %>
-  <li><%= user.email %></li>
-<% end %>
-
-<%= render "favorites/favorite_button", post: @post %>
-
-<%= link_to "ホームへ戻る", root_path %>
+</div>
