--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,83 @@
 <% if logged_in? %>
-  <p>ログイン完了ユーザ: <%= current_user.name %></p>
-  <%= render 'posts/posts', posts: @posts %>
+  <div class="container-fulid">
+    <div class="row">
+      <div class="col topImage position-relative">
+        <div class="topImage__inContent position-absolute">
+          <div class="row mb-4">
+            <div class="col">
+              <div class="topImage__inContent--title">
+                カラーの再現率を
+                <br>
+                上げるアプリ
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <div class="col">
+              <div class="topImage__inContent--content">
+                カラーの再現率を上げるために
+                <br>
+                薬剤の選定や調合をシェアすることができます
+              </div>
+            </div>
+          </div>
+            <div class="topImage__inContent--div text-center">
+              ユーザー登録
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col text-center p-4">
+        <u class="font-weight-bold">
+          新着投稿
+        </u>
+      </div>
+    </div>
+    <div class="row px-4">
+      <% @posts.each do |post| %>
+        <div class="col-lg-4 p-4">
+          <div class="card">
+            <% post.images.each_with_index do |image,i| %>
+              <% if i == 1 %>
+                <%= image_tag image.url.url, height: "430" %>
+              <% end %>
+            <% end %>
+            <div class="card-body">
+              <h4 class="card-title">スダンダードコース</h4>
+              <p class="card-text">ホームページ作成・Web集客を一通り習得したい方向けです。</p>
+              <a href="/posts/<%= post.id %>" class="btn btn-arrival">詳細を見る</a>
+            </div>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <div class="row">
+      <div class="col text-center p-4">
+        <u class="font-weight-bold">
+          人気ユーザ一覧
+        </u>
+      </div>
+    </div>
+    <div class="row px-4">
+      <% @ranks.each_with_index do |user| %>
+        <div class="col-lg-4 p-4">
+          <ul class="list-group">
+            <li class="list-group-item">
+              <i class="fas fa-user-circle"></i>
+              <a href="/users/<%= user.id %>"><%= user.name %></a>
+              <p>投稿数: <%= user.posts.count %></p>
+              <p>フォロワー数: <%= user.followers.count %></p>
+              <p class="badge badge-info">タグ</p>
+              <p class="badge badge-info">タグ</p>
+              <p class="badge badge-info">タグ</p>
+              <a href="#" class="btn btn-arrival">フォローする</a>
+            </li>
+          </ul>
+        </div>
+      <% end %>
+    </div>
+  </div>
 <% else %>
 <div class="center jumbotron">
   <div class="text-center">
