--- a/app/views/users/followings.html.erb
+++ b/app/views/users/followings.html.erb
@@ -1,15 +1,34 @@
-<div class="row">
-    <aside class="col-sm-4">
-      <h3 class="card-title"><%= @user.name %></h3>
-      <p class="card-title"><%= @user.email %></p>
-      <%= render 'relationships/follow_button', user: @user %>
+<div class="user-show-wrapper">
+    <aside>
+      <div class="user-container">
+        <div class="icon">
+        <i class="far fa-user-circle fa-7x"></i>
+        </div>
+        <div class="user-contents">
+          <section class="section-content">
+            <div class="user-dm">
+              <h3 class="user-name"><%= @user.name %></h3>
+              <button class="message-button" type="button">メッセージを送信</button>
+              <div class="follow-bt"><%= render 'relationships/follow_button', user: @user %></div>
+            </div>
+              <ul class="user-count">
+                <li class="span-data"><span>投稿 <span class="cps"><%= @count_posts %></span>件</span></li>
+                <li class="span-data"><a href="<%= followings_user_path(@user) %>" <%= 'active' if current_page?(followings_user_path(@user)) %>><span class="count-btn">フォロワー <span class="cps"><%= @count_followers %></span>人</span></a></li>
+                <li class="span-data"><a href="<%= followers_user_path(@user) %>" <%= 'active' if current_page?(followers_user_path(@user)) %>><span class="count-btn">フォロー <span class="cps"><%= @count_followings %></span>人</span></a></li>
+              </ul>
+          </section>
+        </div>
+      </div>
     </aside>
-  <div class="col-sm-8">
-    <ul class="nav nav-tabs nav-justified mb-3">
-      <li class="nav-item"><a href="<%= user_path(@user) %>" class="nav-link <%= 'active' if current_page?(user_path(@user)) %>">Posts <span class="badge badge-secondary"><%= @count_posts %></span></a></li>
-      <li class="nav-item"><a href="<%= followings_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followings_user_path(@user)) %>">Followings <span class="badge badge-secondary"><%= @count_followings %></span></a></li>
-      <li class="nav-item"><a href="<%= followers_user_path(@user) %>" class="nav-link <%= 'active' if current_page?(followers_user_path(@user)) %>">Followers <span class="badge badge-secondary"><%= @count_followers %></span></a></li>
-    </ul>
+    <div class="c-posts">
+      <a href="<%= user_path(@user) %>" <%= 'active' if current_page?(user_path(@user)) %> class="posts-tag">
+        <span>投稿</span>
+      </a>
+      <a href="<%= likes_user_path(@user) %>" <%= 'active' if current_page?(likes_user_path(@user)) %> class="posts-favorite">
+        <span>お気に入り</span>
+      </a>
+    </div>
+  <div class="posts-content">
     <%= render 'users', users: @followings %>
   </div>
 </div>
