--- a/app/assets/stylesheets/_form.scss
+++ b/app/assets/stylesheets/_form.scss
@@ -10,7 +10,7 @@
 }
 .title-weight {
   font-weight: 600;
-  margin-top: 1rem;
+  //margin-top: 1rem;
 }
 .posts_form {
   margin-left: 20vh;
@@ -31,6 +31,7 @@
   //padding: 20px 20px 20px 55px;
   border-radius: 4px;
   justify-content: center;
+  margin-bottom: 1rem;
 }
 .js-file_group {
   text-align: center;
@@ -69,7 +70,15 @@ textarea[name="post[content]"] {
   text-decoration: none;
   text-align: center;
 }
-
 .hidden-field{
   display: none;
+}
+.title-flex {
+  display: flex;
+}
+.mandatory {
+  //margin-top: 1rem;
+  margin-left: 10px;
+  margin-top: 2px;
+  margin-bottom: 20px;
 }
