--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -19,7 +19,13 @@ html {
 }
 body {
   /* Margin bottom by footer height */
-  margin-bottom: 60px;
+  //margin-bottom: 60px;
+  display: flex;
+  flex-flow: column;
+  min-height: 100vh;
+}
+.container-fluid {
+  flex: 1;
 }
 .btn--color,
 a.btn--color {
