--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,12 +9,12 @@
 
     <div class="form-group">
       <%= f.label :name, 'Name' %>
-      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.text_field :name, class: 'form-control', placeholder: '日比生　昂輔' %>
     </div>
 
     <div class="form-group">
       <%= f.label :email, 'Email' %>
-      <%= f.email_field :email, class: 'form-control' %>
+      <%= f.email_field :email, class: 'form-control', placeholder: 'sample@softbank.jp' %>
     </div>
 
     <div class="form-group">
