--- a/app/views/relationships/_follow_button.html.erb
+++ b/app/views/relationships/_follow_button.html.erb
@@ -2,7 +2,7 @@
   <% if current_user.following?(user) %>
     <%= form_with(model: current_user.relationships.find_by(follow_id: user.id), local: true, method: :delete) do |f| %>
       <%= hidden_field_tag :follow_id, user.id %>
-      <%= f.submit 'フォローをやめる', class: 'btn btn-danger btn-block btn-sm' %>
+      <%= f.submit 'フォロー中', class: 'btn btn_unfw btn-block btn-sm' %>
     <% end %>
   <% else %>
     <%= form_with(model: current_user.relationships.build, local: true) do |f| %>
