--- a/app/views/users/search.html.erb
+++ b/app/views/users/search.html.erb
@@ -2,7 +2,6 @@
   <% if @user_or_post == "1" %>
     <h2 class="search_text">ユーザーを探す</h2>
       <h5 class="search_font">ユーザー一覧</h5>
-        <p class="list-box">1人のユーザーが見つかりました。</p>
         <% @users.each do |user| %>
           <ul class="list-group">
             <div class="list_main">
@@ -28,7 +27,6 @@
   <% elsif @user_or_post == "2" %>
     <h2 class="search_text">投稿を探す</h2>
       <h5 class="search_font">投稿一覧</h5>
-        <p class="list-box">1件の投稿がみつかりました。</p>
         <% @posts.each do |post| %>
           <ul class="list-group">
             <div class="list_main">
@@ -36,16 +34,14 @@
                 <div class="icon_user"><i class="far fa-user-circle fa-5x"></i></div>
                   <div class="list_body">
                     <div class="list_posts">
-                      <a href="/posts/<%= post.id %>" id="post_title"><%= post.title %></a>
+                      <a href="/posts/<%= post.id %>" id="post_ttl"><%= post.title %></a>
                     </div>
                     <p class="badge badge-info" style="margin-bottom: 0;">タグ</p>
                     <p class="badge badge-info" style="margin-left: 5px; margin-bottom: 0;">タグ</p>
                     <p class="badge badge-info" style="margin-left: 5px; margin-bottom: 0;">タグ</p>
                     <div class="search_text_ct">
-                      <% post.images.each_with_index do |image,i| %>
-                        <% if i == 1 %>
-                          <%= image_tag image.url.url, height: "430", width: "345", class: "img_rd" %>
-                        <% end %>
+                      <% post.images.each_with_index do |image| %>
+                        <%= image_tag image.url.url, height: "430", width: "345", class: "img_rd" %>
                       <% end %>
                     </div>
                   </div>
