--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header>
+<header id="header_nav">
   <nav class="navbar navbar-expand-sm navbar-dark">
     <a class="navbar-brand" href="/">Reproduce the color</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="navbarSupportedContent">
