--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,4 +1,4 @@
-<ul class="posts-content">
+<ul class="posts-content post_box">
   <% posts.each do |post| %>
     <li class="card mb-3">
       <div class="card-body">
