--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -38,7 +38,7 @@
   <%= render @posts %>
 <% else %>
 <div class="container-fulid">
-    <div class="row">
+    <div class="row row_cl">
       <div class="col topImage position-relative">
         <div class="topImage__inContent position-absolute">
           <div class="row mb-4">
