--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,9 +1,9 @@
 <ul class="posts-content post_box">
   <% posts.each do |post| %>
-    <li class="card mb-3">
+    <li class="card mb-3 posts__li">
       <div class="card-body">
         <div class="card-title">
-          <h5><%= link_to post.user.name, user_path(post.user) %></h5><span class="text-muted"> posted at <%= post.created_at %></span>
+          <h5 id="h5_font"><%= link_to post.user.name, user_path(post.user), class: "font_li" %></h5><span class="text-muted"> posted at <%= post.created_at %></span>
         </div>
         <div>
           <p><a href="/posts/<%= post.id %>" class="posts_title"><%= post.title %></a></p>
@@ -15,7 +15,10 @@
         </div>
         <div>
           <% if current_user == post.user %>
-            <%= link_to 'Delete', post, method: :delete, data: { confirm: "削除します。よろしいですか？" } %>
+            <button id="delete__btn">
+              <i class="far fa-trash-alt"></i>
+              <%= link_to 'Delete', post, method: :delete, id:"delete__post", data: { confirm: "削除します。よろしいですか？" } %>
+            </button>
           <% end %>
         </div>
       </div>
