--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -35,7 +35,7 @@
       </div>
     <% end %>
   </div>
-  <%= render @posts %>
+  <%= render 'posts/post', posts: @posts %>
 <% else %>
 <div class="container-fulid">
     <div class="row row_cl">
