--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,22 +1,24 @@
 <div class="contents_top">
   <ul id="top_main">
-    <li class="card mb-3 post_li">
-      <div class="card-body">
-        <div class="card-title">
-          <h5 id="h5_font"><%= link_to post.user.name, user_path(post.user), class: "font_li" %></h5>
-          <span class="text-muted"> posted at <%= post.created_at %></span>
+    <% posts.each do |post| %>
+      <li class="card mb-3 post_li">
+        <div class="card-body">
+          <div class="card-title">
+            <h5 id="h5_font"><%= link_to post.user.name, user_path(post.user), class: "font_li" %></h5>
+            <span class="text-muted"> posted at <%= post.created_at %></span>
+          </div>
+          <p style="text-align: left;"><a href="/posts/<%= post.id %>" class="posts_title"><%= post.title %></a></p>
+          <% post.images.each do |image| %>
+            <%= image_tag image.url.url, :size =>'293x350' %>
+          <% end %>
+          <% if current_user == post.user %>
+            <button id="delete__btn">
+              <i class="far fa-trash-alt"></i>
+              <%= link_to 'Delete', post_path(post), method: :delete, id:"delete__post", data: { confirm: "削除します。よろしいですか？" } %>
+            </button>
+          <% end %>
         </div>
-        <p style="text-align: left;"><a href="/posts/<%= post.id %>" class="posts_title"><%= post.title %></a></p>
-        <% post.images.each do |image| %>
-          <%= image_tag image.url.url, :size =>'293x350' %>
-        <% end %>
-        <% if current_user == post.user %>
-          <button id="delete__btn">
-            <i class="far fa-trash-alt"></i>
-            <%= link_to 'Delete', post_path(post), method: :delete, id:"delete__post", data: { confirm: "削除します。よろしいですか？" } %>
-          </button>
-        <% end %>
-      </div>
-    </li>
+      </li>
+    <% end %>
   </ul>
 </div>
