--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -202,3 +202,12 @@
 .posts__li {
   border-radius: 20px;
 }
+.posts__img {
+  width: 550px;
+  border-radius: 20px;
+  height: 300px;
+  text-align: center;
+}
+.ctl {
+  justify-content: center;
+}
