--- a/app/assets/stylesheets/toppages.scss
+++ b/app/assets/stylesheets/toppages.scss
@@ -173,3 +173,24 @@ body {
 .row_cl {
   margin-left: 0;
 }
+.post_present {
+  margin-right: 652px;
+  margin-left: 110px;
+  border-radius: 20px;
+  height: 565px;
+}
+.index__title {
+  justify-content: center;
+  padding-top: 110px;
+}
+.top__index {
+  padding-top: 20px;
+  text-align: center;
+}
+.top__btn {
+  text-align: center;
+  padding-top: 25px;
+}
+.btn-arrival:hover {
+  color: #ffffff;
+}
