--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -27,8 +27,20 @@
                 </div>
               </div>
             </div>
-            <div class="list__btn">
-              <a href="#" class="btn btn-arrival">フォローする</a>
+            <div class="list__btn" style="margin-top: -10px;">
+              <% unless current_user == user %>
+                <% if current_user.following?(user) %>
+                  <%= form_with(model: current_user.relationships.find_by(follow_id: user.id), local: true, method: :delete) do |f| %>
+                    <%= hidden_field_tag :follow_id, user.id %>
+                    <%= f.submit 'フォロー中', class: 'btn btn-danger btn-block btn-sm', id: "user_unfw_btn" %>
+                  <% end %>
+                <% else %>
+                  <%= form_with(model: current_user.relationships.build, local: true) do |f| %>
+                    <%= hidden_field_tag :follow_id, user.id %>
+                    <%= f.submit 'フォローをする', class: 'btn btn-block btn-sm btn-arrival', id: "user_fw_btn" %>
+                  <% end %>
+                <% end %>
+              <% end %>
             </div>
           </li>
         </ul>
